Tao hieu ung khi login

--- a/src/containers/Auth/Login.scss
+++ b/src/containers/Auth/Login.scss
@@ -3,10 +3,16 @@
   background: linear-gradient(135deg, rgba(34,193,195,1) 0%,     rgba(253,187,45,1) 100%);
   .login-container{
     width: 400px;
-    height: 100%;
-    margin: 0 auto;
     border-radius: 10px;
     background-color: white;
+    position: absolute;
+    margin: auto;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    height: 500px;
+
     .login-content{
         padding: 10px;
         .text-login{
@@ -15,8 +21,17 @@
             font-size:24px;
             padding-top: 10px;
         }
-        .login-input{
+        .login-input {
             margin: 7px 0;
+            .custom-input-password{
+                position: relative;
+                i{
+                    position: absolute;
+                    right: 5px;
+                    top: 10px;
+                    cursor: pointer;
+                }
+            }
         }
         .btn-login {
             width: 100%;
