Tao form input modal

--- a/src/containers/System/UserManage.scss
+++ b/src/containers/System/UserManage.scss
@@ -44,3 +44,36 @@
         color: orange !important;
     }
   }
+  .modal-user-container{   
+    .modal-conten{
+      .modal-header{
+        button{
+          background: transparent !important;
+          color: red;
+        }
+      }
+  
+    }
+    
+    .modal-user-body{
+      display: flex;
+      gap: 15px;
+      flex-wrap: wrap;
+      .input-container{
+        display: flex;
+        flex-direction: column;
+        width: 49%;
+        &.max-width-input {
+          width: 100%;
+        }
+        input{
+          border-radius: 3px;
+          border: 1px solid grey;
+          height: 30px;
+          outline: none;
+          padding: 0 10px;
+        }
+      }
+    
+    }
+  }
