design home page

--- a/src/containers/HomePage/HomeHeader.scss
+++ b/src/containers/HomePage/HomeHeader.scss
@@ -32,8 +32,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            .child-content{
-               
+            .child-content{               
                .subs-title{
                 font-weight: 400;
                 font-size: 12px;
@@ -49,4 +48,97 @@
             border: 1px solid gray;
         }
     }
+}
+.home-header-banner{
+    background: url('../../assets/header-background.jpg');
+    height: 700px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    flex-direction: column;
+    .content-up{
+        border: 1px solid red;
+        height: 50%;
+        padding-top: 15px;
+        .title1{
+            text-align:  center;
+            font-size: 30px;
+            text-shadow: 1px 1px 1px #333;
+            color: white;
+            margin-bottom: 5px;
+            margin-top: 30px;
+    
+    
+        }
+        .title2{
+            text-align:  center;
+            font-size: 30px;
+            text-shadow: 1px 1px 1px #333;
+            color: white;
+            margin-bottom: 25px;
+            
+        }
+        .search{
+
+            border: none;
+            width: fit-content;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 30px auto;
+            padding: 10px;
+            border-radius: 25px;
+            background: #f7d800;
+            i{
+                margin: 0 5px;
+            }
+            input {
+                height: 30px;
+                width: 360px;
+                background: transparent;
+                border: none;
+                outline: none;
+            }
+    
+        }
+    }
+    .content-down {
+        border: 1px solid green;
+        height: 50%;
+    .options{
+        gap: 70px;  // cac phan tu cach nhau 1 doan
+        justify-content: center;  
+        text-align: center;
+        display: flex;
+        flex-direction: row;
+        .option-child {
+            width: 100px;
+            border: 1px solid red;
+            .icon-child{                
+                background: white;
+                width: 50px;
+                height: 50px;
+                padding: 10px;
+                border-radius: 50% ;
+                text-align: center;
+                margin: 0 auto;
+                i{
+                    color: #49bce2;
+                    font-size: 20px;
+                }
+            }
+            .text-child{
+                font-size: 17px;
+                font-weight: 500;
+                cursor: pointer;
+                &:hover {
+                    color: #49bce2;
+                }
+                
+            }
+        }
+    }
+    }
+   
+    
 }
