--- a/src/containers/HomePage/HomeHeader.scss
+++ b/src/containers/HomePage/HomeHeader.scss
@@ -1,7 +1,7 @@
 .home-header-container {
     height: 60px;
     width: 100%;
-    padding: 0 20px;
+    padding: 0 40px;
 
     .home-header-content {
         width: 100%;
@@ -10,15 +10,14 @@
 
         .left-content {
             width: 25%;
-            border: 1px solid orange ;
             align-items: center;
             display: flex;
             .header-logo{
-                background: url('../../assets/logo.svg') center center no-repeat;
                 height: 100%;
                 width: 100%;
                 cursor: pointer;
-                align-items: center;
+                transform: scale(0.5, 0.5);
+                margin-left: -70px;
             }
             i{
                 font-size: 25px;
@@ -27,15 +26,14 @@
             }
         }
         .center-content {
-            width: 50%;
-            border: 1px solid blue;
+            width: 65%;
             display: flex;
             justify-content: space-between;
             align-items: center;
             .child-content{               
                .subs-title{
                 font-weight: 400;
-                font-size: 12px;
+                font-size: 15px;
 
                } 
             }
@@ -43,22 +41,49 @@
         .right-content {
             display: flex;
             align-items: center;
-            justify-content: center;
+            justify-content: flex-end;
             width: 25%;
-            border: 1px solid gray;
+            .support{
+                padding-right: 50px;
+                display: flex;
+                align-items: center;
+                cursor: pointer;
+                i{
+                    font-size: 15px;
+                    margin-right: 5px;
+                    
+                }
+            }
+            .language-vn{
+                cursor: pointer;
+                &.active{
+                    color: orange;
+                }
+        
+
+            }
+            .language-en{
+                margin: 0 10px;
+                cursor: pointer;
+                &.active{
+                    color: blue;
+                }
+            }
         }
     }
 }
 .home-header-banner{
-    background: url('../../assets/header-background.jpg');
+    background-image: url('../../assets/header-background.jpg');
     height: 700px;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     flex-direction: column;
+
+
     .content-up{
-        border: 1px solid red;
-        height: 50%;
+        background-image:linear-gradient(rgba(126, 126, 126, 0.25), rgba(255 ,255 ,255 ,0.1));
+        height: 65%;
         padding-top: 15px;
         .title1{
             text-align:  center;
@@ -103,8 +128,13 @@
         }
     }
     .content-down {
-        border: 1px solid green;
-        height: 50%;
+        height: 35%;
+        display: flex;
+        align-items: flex-end;
+        justify-content: center;
+        background-image: linear-gradient(rgba(255, 255, 255, 0.1), rgba(255 ,255 ,255 ,0.9),rgba(255 ,255 ,255 ,1));
+
+
     .options{
         gap: 70px;  // cac phan tu cach nhau 1 doan
         justify-content: center;  
@@ -113,7 +143,6 @@
         flex-direction: row;
         .option-child {
             width: 100px;
-            border: 1px solid red;
             .icon-child{                
                 background: white;
                 width: 50px;
@@ -124,7 +153,7 @@
                 margin: 0 auto;
                 i{
                     color: #49bce2;
-                    font-size: 20px;
+                    font-size: 30px;
                 }
             }
             .text-child{
