--- a/src/containers/HomePage/HomeHeader.scss
+++ b/src/containers/HomePage/HomeHeader.scss
@@ -54,10 +54,18 @@
                     
                 }
             }
-            .language-vn{
+            .language-vi{
                 cursor: pointer;
+                opacity: 0.2;
                 &.active{
-                    color: orange;
+                    opacity: 1;
+                    span{
+                        color: orange;
+                    }
+                    
+                }
+                &:hover{
+                    opacity: 0.8;
                 }
         
 
@@ -65,8 +73,16 @@
             .language-en{
                 margin: 0 10px;
                 cursor: pointer;
+                opacity: 0.2;
                 &.active{
-                    color: blue;
+                    opacity: 1;
+                    span{
+                        color: blue;
+                    }
+                    
+                }
+                &:hover{
+                    opacity: 0.8;
                 }
             }
         }
