--- a/src/containers/HomePage/Section/Specialty.scss
+++ b/src/containers/HomePage/Section/Specialty.scss
@@ -1,14 +1,94 @@
 .section-specialty{
-    height: 330px;
-    background: #f5f5f5;
-    border: 1px solid red;
-}
-.slick-previous{
-    border: 1px solid green;
-    position: relative;
-    left: 0 !important;
-}
-.slick-next{
-    border: 1px solid red;
-    left: 0 !important;
-}
+    height:         330px;
+    background:     #f5f5f5;
+   
+    .specialty-container{
+        margin:     0 50px;
+        display:    flex;
+        flex-direction: column;
+
+        .specialty-header{
+            height: 60px;
+            padding-top: 30px;
+            margin-bottom: 30px;
+            .title-section {
+                font-size: 22px;
+                font-weight: 600;
+            }
+            .btn-section {
+                float: right;
+                padding: 10px 15px;
+                border: none;
+                outline: none;
+                display: block;
+                background: #ebebeb;
+                color: black;
+                cursor: pointer;
+                text-transform: uppercase;
+                &:hover{
+                    color: #fff;
+                    background: #f7d800;
+                }
+            }
+        }
+        .specialty-body{
+            align-items: center !important;
+            
+            .specialty-customize {
+                .bg-image{
+                    background:         url('../../../assets/specialty/co-xuong-khop.jpg');
+                    height:             200px;
+                    width:              350px;
+                    background-position: center center;
+                    background-repeat:  no-repeat;
+                    background-size:    cover;
+                    background-color:   #eee;
+
+                }
+            }
+            .slick-slider{
+                display: flex;
+                align-items: center;
+
+                .slick-prev{           
+                    
+                    z-index:            1000 !important;
+                    height:             40px !important;
+                    width:              4px !important;
+                    background-color:   #fff !important;
+                    border: 2px solid   #d7d7d7 !important;
+                    &:hover{
+                        background:     #f0f3f5 !important ;
+                    }
+                }
+                .slick-prev:before,
+                .slick-next:before{
+                    color:              red !important;
+                    content:            "\e257" !important;
+                    font-size:          20px ;
+                }
+                    
+                }
+                .slick-next{
+                    float: right !important;
+                    z-index:            1000 !important;
+                    height:             40px !important;
+                    width:              44px !important;
+                    background-color:   #fff !important;
+                    border:             2px solid  #d7d7d7 !important;
+                    &:hover{
+                        background:     #f0f3f5 !important ;
+                } 
+
+            }
+            
+                   
+            }
+        }        
+    }
+   
+   
+       
+
+    
+    
